# eortologio-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: cache.py  nameday_service.py
app/utils/: http.py
