[project]
name = "eortologio-api"
version = "1.0.0"
description = "Fetches nameday information (celebrating names and saints) from eortologio.net"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ilias Nikolaos Thalassochoritis", email = "iliascodes@gmail.com" }
]
keywords = ["nameday", "greek", "saints", "api"]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "cachetools==6.2.4",
    "pydantic==2.12.5",
    "slowapi==0.1.9",
]

[project.scripts]
eortologio-api-server = "app.main:start_server"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = [
    "implementation_name == 'cpython'"
]